--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,7 @@
         console.log('Error occured: ' + evt.data);
     };
     // 下面的代码是用来测试的
-    $('#bjy-chat-modal').modal('show');
+    $('#bjy-chat-modal').modal({backdrop: 'static', keyboard: false});
 </script>
 <script src="js/config.js"></script>
 <script src="js/emoji-picker.js"></script>
