--- a/Index.html
+++ b/Index.html
@@ -96,12 +96,12 @@
     var websocket = new WebSocket(wsServer);
     var approveImg = '';
     $('.bjy-cbh-send').click(function(){
-//        userInfo={
-//            'content': $('#bjy-chat-modal .bjy-cbs-content').val(),
-//            'direction':'bjy-cbhla-left',
-//            'avatar': "./images/user1.jpg",
-//            'approveImg':'./images/user1.jpg',
-//        };
+        userInfo={
+            'content': $('#bjy-chat-modal .bjy-cbs-content').val(),
+            'direction':'bjy-cbhla-left',
+            'avatar': "./images/user1.jpg",
+            'approveImg':'./images/user1.jpg',
+        };
 //        var htmlStr=$('#bjy-chat-modal .bjy-emoji-box3').html();
 //        var m = rongCreateMessage(userInfo);
 //        $('.bjy-cb-history').append(m);
