--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,16 @@
             </div>
             <div class="bjy-chat bjy-emoji-out3">
                 <div class="bjy-friend-list">
-                    <div class="bjy-fl-one bjy-flo-checked" data-edu="" data-avatar="images/user2.jpg" data-username="admin2" data-uid="89"><div class="bjy-flo-avatar"><img class="bjy-floa-img" src="./images/user2.jpg"><div class="bjy-flo-count " style="display: none;">0</div></div><ul class="bjy-flo-info"><li class="bjy-flo-username">admin2<span class="bjy-flou-time">16:24:1</span></li><li class="bjy-flo-school"></li></ul></div>
+                    <div class="bjy-fl-one bjy-flo-checked" data-edu="" data-avatar="images/user2.jpg" data-username="admin2" data-uid="89">
+                        <div class="bjy-flo-avatar">
+                            <img class="bjy-floa-img" src="./images/user2.jpg">
+                            <div class="bjy-flo-count " style="display: none;">0</div>
+                        </div>
+                        <ul class="bjy-flo-info">
+                            <li class="bjy-flo-username">admin2<span class="bjy-flou-time">16:24:1</span></li>
+                            <li class="bjy-flo-school"></li>
+                        </ul>
+                    </div>
 
                 </div>
                 <div class="bjy-chat-box bjy-show-out">
