--- a/Index.html
+++ b/Index.html
@@ -45,6 +45,24 @@
                 </div>
                 <div class="bjy-chat-box bjy-show-out">
                     <div class="bjy-cb-history">
+
+
+                        <div class="msg-content" id="msg-content">
+                            <div class="message-feed media" v-for="msg in msgs">
+                                <div class="bjy-cbh-one bjy-cbhla-{{msg.from}}">
+                                    <div class="bjy-cbhl-avatar">
+                                        <img class="bjy-cbhla-img" src="{{msg.avatar}}">
+                                        <div class="bjy-cbhla-triangle"></div>
+
+                                    </div>
+                                    <div class="bjy-cbhl-content">
+                                        {{msg.body}}
+                                    </div>
+                                    <div style="padding-top: 10px;">{{new Date(parseInt(msg.timestamp) * 1000).toLocaleString().replace(/:\d{1,2}$/,' ')}}</div>
+                                </div>
+
+                            </div>
+                        </div>
                         <!--<div class="bjy-cbh-one bjy-cbhla-left"><div class="bjy-cbhl-avatar"><img class="bjy-cbhla-img" src="images/user2.jpg"><div class="bjy-cbhla-triangle"></div></div><div class="bjy-cbhl-content">http://down.admin5.com/info/2016/0926/134391.html</div></div>-->
                         <!--<div class="bjy-cbh-one bjy-cbhla-right"><div class="bjy-cbhl-avatar"><img class="bjy-cbhla-img" src="images/user1.jpg"><div class="bjy-cbhla-triangle"></div></div><div class="bjy-cbhl-content">123<br><br></div></div>-->
                     </div>
@@ -100,55 +118,43 @@
 <script src="js/jquery.js"></script>
 <script src="js/jquery.json.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-
-<script type="text/javascript" >
-    var wsServer = 'ws://'+document.domain+':9502';
-    var websocket = new WebSocket(wsServer);
-    var approveImg = '';
-    $('.bjy-cbh-send').click(function(){
-        userInfo={
-            'content': $('#bjy-chat-modal .bjy-cbs-content').val(),
-            'direction':'bjy-cbhla-left',
-            'avatar': "./images/user1.jpg",
-            'approveImg':'./images/user1.jpg',
-        };
-//        var htmlStr=$('#bjy-chat-modal .bjy-emoji-box3').html();
-//        var m = rongCreateMessage(userInfo);
-//        $('.bjy-cb-history').append(m);
-        websocket.send(userInfo['content']);
+<script src="js/vue/vue.min.js"></script>
+<script type="text/javascript">
+    var msgvm = new Vue({
+        el: '#msg-content',
+        data: {
+            msgs: [
+            ]
+        }
     });
-    function rongCreateMessage(messageContent){
-        str='<div class="bjy-cbh-one '+messageContent['direction']+'"><div class="bjy-cbhl-avatar"><img class="bjy-cbhla-img" src="'+messageContent['avatar']+'">'+approveImg+'<div class="bjy-cbhla-triangle"></div></div><div class="bjy-cbhl-content">'+messageContent['content']+'</div></div>';
-        return str;
-    }
-    websocket.onopen = function (evt) {
-        console.log("Connected to WebSocket server.");
-    };
-
-    websocket.onclose = function (evt) {
-        console.log("Disconnected");
-    };
-
-    websocket.onmessage = function (evt) {
-        console.log('Retrieved data from server: ');
-        userInfo={
-            'content': evt.data,
-            'direction':'bjy-cbhla-right',
-            'avatar': "./images/user2.jpg",
-            'approveImg':'./images/user2.jpg',
+    $(function () {
+        var ws = new WebSocket("ws://localhost:9503");
+        $(document).keydown(function (e) {
+            if (e.which === 13&&e.ctrlKey) {
+                $('.bjy-cbh-send').trigger('click');
+            }
+        });
+        ws.onopen = function (event) {
+            ws.send("接入服务器");
         };
-        var m = rongCreateMessage(userInfo);
-        var htmlStr=$('#bjy-chat-modal .bjy-emoji-box3').html();
-        $('.bjy-cb-history').append(m);
-        $('.bjy-cb-history').scrollTop(100000000);
-    };
-
-    websocket.onerror = function (evt, e) {
-        console.log('Error occured: ' + evt.data);
-    };
-    // 下面的代码是用来测试的
-    $('#bjy-chat-modal').modal({backdrop: 'static', keyboard: false});
+        ws.onmessage = function (event) {
+            console.log(event.data);
+            var data = JSON.parse(event.data);
+            msgvm.msgs.push(data);
+            $('.msg-content').animate({scrollTop:$(".msg-content").get(0).scrollHeight},'slow');  //滚动条自动到底部
+            $('.bjy-cb-history').scrollTop(100000000);
+        };
+        $('.bjy-cbh-send').click(function () {
+            var content = $('#bjy-chat-modal .bjy-cbs-content').val();
+            if(content){
+                ws.send(content);
+                $(".bjy-show-box").empty();
+            }
+        });
+        $('#bjy-chat-modal').modal({backdrop: 'static', keyboard: false});
+    });
 </script>
+
 <script src="js/config.js"></script>
 <script src="js/emoji-picker.js"></script>
 <script src="js/jquery.emojiarea.js"></script>
@@ -160,7 +166,7 @@ $(function(){
     // 初始化emoji
     window.emojiPicker = new EmojiPicker({
         emojiable_selector: '[data-emojiable=true]',
-        assetsPath: 'http://xueba17.oss-cn-beijing.aliyuncs.com/Public/statics/emoji/images',
+        assetsPath: './images/emoji/images',
         'iconSize': 20
     });
     window.emojiPicker.discover();
